2013-10-22  Rajarshi Guha <rajarshi.guha@gmail.com>

	* R/matrix.R (fp.sim.matrix): Updated to use the new matrix
	multiplication based Tanimoto calculation for similarity matrices
	contributed by Abhik Seal

2013-10-06  Rajarshi Guha <rajarshi.guha@gmail.com>

	* R/zzz.R (.onLoad): Removed unecessary usage of require

	* R/misc.R: Removed debug code

2013-10-05  Rajarshi Guha <rajarshi.guha@gmail.com>

	* Added the 'feature' class to represent alphanumeric features
          (usually substructures but could be arbitrary hashes) and
          their counts

        * Updated the 'featvec' fingerprint class to use 'feature'
          objects

        * Removed featvec.to.binary since the featvec fingerprint
          type can also include non numeric features

2013-04-05  Rajarshi Guha <rajarshi.guha@gmail.com>

	* Updated package to remove use of deprecated methods

2012-10-30  Rajarshi Guha <rajarshi.guha@gmail.com>

	* R/matrix.R (fp.sim.matrix): Added code provided by Abhik Seal 
	to speed up pairwise similarity matrix calculation when the Dice
	metric is specified.

2012-02-21  Rajarshi Guha <rajarshi.guha@gmail.com>

	* R/read.R (jchem.binary.lf): Added a line parser for JChem binary
	string formatted fingerprints. This is based on a C function to
	parse the fingerprint portion of a line

2011-07-26  Rajarshi Guha <rajarshi.guha@gmail.com>

	* man/sim.Rd: Updated man page for fp.sim.matrix to indicate the
	use of two fingerprint lists

	* R/matrix.R (fp.sim.matrix): Updated similarity matrix
	calculation to support cross-similarity (ie, similarity matrix
	from two (possibly different lengths) lists of fingerprints

2011-06-03  Rajarshi Guha <rajarshi.guha@gmail.com>

	* src/fpdistance.c: Cleaned up uncessary headers and unused variables

	* src/readfps.c: Cleaned up unecessary headers

2011-06-02  Rajarshi Guha <rajarshi.guha@gmail.com>

	* R/read.R (fp.read): Updated line functions to return a third