@@ -1,6 +1,6 @@
 Package: fingerprint
-Version: 3.5.1
-Date: 2013-10-23
+Version: 3.5.2
+Date: 2013-10-27
 Title: Functions to operate on binary fingerprint data
 Author: Rajarshi Guha <rajarshi.guha@gmail.com>
 Maintainer: Rajarshi Guha <rajarshi.guha@gmail.com>
