@@ -1,3 +1,8 @@
+2013-10-27  Guha  <guhar@HG-01881061-LM8.local>
+
+	* R/matrix.R (.tanimoto.sim.mat): Updated Tanimoto matrix code
+	form Abhik Seal to use C code for nested loops.
+
 2013-10-22  Rajarshi Guha <rajarshi.guha@gmail.com>
 
 	* R/matrix.R (fp.sim.matrix): Updated to use the new matrix
